# SyterKit

./: Cargo.toml
board/100ask-d1-h-rs/src/: main.rs
board/avaota-f1-rs/: Cargo.toml
rust/: Cargo.toml
rust/src/: lib.rs  macros.rs  mctl.rs  payload.rs  sdcard.rs  soc.rs  stdio.rs
rust/src/soc/: sun20iw1.rs  sun300iw1.rs
