[workspace]
resolver = "2"
members = [
    "rust",
    "rust/macros",
    "rust/xtask",
    "board/100ask-d1-h-rs",
]

[patch.crates-io]
allwinner-hal = { git = "https://github.com/rustsbi/allwinner-hal", branch = "main" }
allwinner-rt = { git = "https://github.com/rustsbi/allwinner-hal", branch = "main" }
